# jovial-compiler

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: compute.jov  exitcode.jov  factorial.jov  factorial2.jov  fibonacci.jov  flight_control.c  flight_control.jov  hello.jov  helloworld.jov  interactive.jov  mini.jov  simple.jov
src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  llvm_codegen.rs  main.rs  parser.rs  semantic.rs
